feat: create resource as stated by rule of five

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,12 @@ project(resource_manager)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(resource_manager main.cpp)
+# Основной исполняемый файл
+add_executable(resource_manager
+        src/main.cpp
+        include/resource.h
+        src/resource.cpp
+)
+
+# Папка заголовочных файлов
+target_include_directories(resource_manager PRIVATE include)
